--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.3.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "got": "^12.6.0",
     "node-fetch": "^2.6.1",
     "request": "^2.88.2",
+    "sharp": "^0.34.1",
     "unirest": "^0.6.0"
   },
   "engines": {
